# education-aiagent

./: .gitignore  pyproject.toml
week2/: main.ipynb  main.py
week2/config/: agents.yaml  tasks.yaml
week3/: pyproject.toml
week4/dummy_agent/: agent.py
